--- a/bpd_ui/src/Header/Header.css
+++ b/bpd_ui/src/Header/Header.css
@@ -8,6 +8,7 @@
 	text-align: center;
 	vertical-align: middle;
 	line-height: 100px;       /* The same as your div height */
+	text-decoration: none;
 }
 
 /*Clickable header items*/
