--- a/bpd_ui/src/Filter/Collapse.css
+++ b/bpd_ui/src/Filter/Collapse.css
@@ -3,6 +3,8 @@
 	color: black;
 	width: 100%;
 	border: 1px solid black;
+	border-right: none;
+	border-left: none;
 }
 
 .collapse-body {
@@ -10,6 +12,8 @@
 	padding: 0;
 	margin: 0;
 	border: 1px solid black;
+	border-right: none;
+	border-left: none;
 }
 
 .collapse-header:hover {
