--- a/bpd_ui/src/CrimeTable/CrimeTable.css
+++ b/bpd_ui/src/CrimeTable/CrimeTable.css
@@ -21,3 +21,22 @@ th {
 tr:hover {
 	background-color: #ECECEC;
 }
+
+.loader {
+	border: 6px solid #f3f3f3; /* Light grey */
+	border-top: 6px solid #959595; /* Dark Grey */
+	border-radius: 50%;
+	width: 60px;
+	height: 60px;
+	animation: spin 2s linear infinite;
+	position: absolute;
+	left: 50%;
+	margin-left: -30px;
+	top: 50%;
+	margin-top: -30px;
+  }
+  
+  @keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+  }
