--- a/bpd_ui/src/Map/CrimeMarker.css
+++ b/bpd_ui/src/Map/CrimeMarker.css
@@ -40,3 +40,18 @@
 	color: black;
 	cursor: pointer;
 }
+
+.loader {
+	border: 6px solid #f3f3f3; /* Light grey */
+	border-top: 6px solid #959595; /* Dark Grey */
+	border-radius: 50%;
+	width: 60px;
+	height: 60px;
+	animation: spin 2s linear infinite;
+	position: absolute;
+	left: 50%;
+	margin-left: -30px;
+	top: 50%;
+	margin-top: -30px;
+	z-index: 2;
+  }
